--- a/src/app/user-location/user-location.component.html
+++ b/src/app/user-location/user-location.component.html
@@ -1,56 +1,57 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+  integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
- <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-    <title>Bootstrap Example</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-
-    
-
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+  <title>Bootstrap Example</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
 
 
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
-          <div class="container-fluid">
-   
-      <div class="navbar-nav mb-0 h4">
-        <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
-        <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
-        <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
-        <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
-        <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
-        <a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a>
-      </div>
+
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
+  <div class="container-fluid">
+
+    <div class="navbar-nav mb-0 h4">
+      <a class="nav-link active" aria-current="page" routerLink="/PersonalDetails">Home</a>
+      <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
+      <a class="nav-link  active" aria-current="page" routerLink="/Certificates">Cv</a>
+      <a class="nav-link active" aria-current="page" routerLink="/Portfolio">Portfolio</a>
+      <a class="nav-link active" aria-current="page" routerLink="/Contacts">Contacts</a>
+      <!-- <a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a> -->
+    </div>
   </div>
 </nav>
 <div class="card text-bg-dark">
   <img src="https://wallpaperaccess.com/full/701617.jpg" class="card-img" alt="...">
   <div class="card-img-overlay">
-   
+
     <div class="card-body text-center">
-    <div id="map"></div>
-    <div *ngIf="weather" class="weatherData">
-  <span class="city"> {{weather.name}},  {{weather.sys.country}}</span>
-  <br>
-  
-  <span class="date">{{date | date :'yyyy-MMMM-dd    HH:mm'}}</span><br>
- 
-  <div class="icon">
-<img src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@4x.png"  alt=""><img src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@4x.png"  alt="">
+      <div id="map"></div>
+      <div *ngIf="weather" class="weatherData">
+        <span class="city"> {{weather.name}}, {{weather.sys.country}}</span>
+        <br>
+
+        <span class="date">{{date | date :'yyyy-MMMM-dd HH:mm'}}</span><br>
+
+        <div class="icon">
+          <img src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@4x.png" alt=""><img
+            src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@4x.png" alt="">
+        </div>
+        <span class="description">{{weather.weather[0].description}}</span>
+
+        <br>
+        <span class="humidity"><a>humidity </a>{{weather.main.humidity}}%</span>
+        <br>
+        <span class="pressure"><a>pressure </a>{{weather.main.humidity}}hpa</span><br>
+      </div>
     </div>
-    <span class="description">{{weather.weather[0].description}}</span>
-
- <br>
-<span class="humidity"><a>humidity    </a>{{weather.main.humidity}}%</span>
-<br>
-<span class="pressure"><a>pressure    </a>{{weather.main.humidity}}hpa</span><br>
- </div>
   </div>
+
+
 </div>
-
-  
-  </div>
-  
