--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -14,18 +14,23 @@
   integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <div class="card text-center">
   <div class="card-header">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <div class="navbar-nav mb-0 h4">
-          <a class="nav-link active" aria-current="page" routerLink="/PersonalDetails">Home</a>
-          <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
-          <a class="nav-link  active" aria-current="page" routerLink="/Certificates">Cv</a>
-          <a class="nav-link active" aria-current="page" routerLink="/Portfolio">Portfolio</a>
-          <a class="nav-link active" aria-current="page" routerLink="/Contacts">Contacts</a>
-          <a class="nav-link active" aria-current="page" routerLink="/UserLocation">UserLocation</a>
-        </div>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
+  <div class="container-fluid">
+   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
+        <a class="nav-link " aria-current="page" routerLink="/About">About</a>
+        <a class="nav-link " aria-current="page"routerLink="/Certificates">Cv</a>
+        <a class="nav-link" aria-current="page"routerLink="/Portfolio">Portfolio</a>
+        <a class="nav-link"aria-current="page" routerLink="/Contacts">Contacts</a>
+        <a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a>
       </div>
-    </nav>
+    </div>
+  </div>
+</nav>
   </div>
 
   <div class="card  text-bg-dark mb-3">
